--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
           <div class="container">
             <h1 class="h-main">Effective Solutions for Your Business</h1>
 
-            <button class="button" type="button">Order Service</button>
+            <button class="button" type="button" data-modal-open>
+              Order Service
+            </button>
           </div>
         </section>
 
@@ -540,7 +542,31 @@
             </ul>
           </div>
         </div>
+        <div>
+          <!-- input -->
+          <form>
+            <label
+              >Subscribe
+              <input type="email" name="email" placeholder="Email" />
+            </label>
+            <button class="button-subscribe" type="submit">
+              Subscribe
+              <svg class="svg-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </footer>
     </div>
+
+    <!-- modal -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close" type="button" data-modal-close>x</button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
