--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 <input
                   type="email"
                   name="email"
-                  placeholder="Email"
+                  placeholder="E-mail"
                   class="input-email-footer"
                 />
               </label>
