--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
               </label>
               <button class="button-subscribe" type="submit">
                 Subscribe
-                <svg class="svg-social-media" width="24" height="24">
+                <svg class="svg-subscribe" width="24" height="24">
                   <use href="./images/icons.svg#icon-Frame-3"></use>
                 </svg>
               </button>
@@ -566,10 +566,31 @@
       </footer>
 
       <!-- modal -->
-      <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-          <button class="modal-close" type="button" data-modal-close>x</button>
+      <div class="modal-container">
+        <div class="modal-wind">
+          <button class="modal-button" type="button">
+            <svg class="close-svg" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+            </svg>
+          </button>
         </div>
+        <p class="para-modal">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="modal-w-form">
+            <label class="label-user-name" for="user-name">Name </label>
+            <div class="container-input-icon">
+              <input
+                class="input-user-name"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="svg-person" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </body>
