--- a/index.html
+++ b/index.html
@@ -578,19 +578,67 @@
         <p class="para-modal">Leave your contacts and we will call you back</p>
         <form>
           <div class="modal-w-form">
-            <label class="label-user-name" for="user-name">Name </label>
+            <label class="label-modal" for="user-name">Name </label>
             <div class="container-input-icon">
               <input
-                class="input-user-name"
+                class="input-modal"
                 type="text"
                 name="user-name"
                 id="user-name"
               />
-              <svg class="svg-person" width="18" height="24">
+              <svg class="svg-modal" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
           </div>
+          <div class="modal-w-form">
+            <label class="label-modal" for="phone">Phone </label>
+            <div class="container-input-icon">
+              <input class="input-modal" type="text" name="phone" id="phone" />
+              <svg class="svg-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-w-form">
+            <label class="label-modal" for="email">Email</label>
+            <div class="container-input-icon">
+              <input class="input-modal" type="text" name="email" id="email" />
+              <svg class="svg-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-cont-comment">
+            <label class="label-modal" for="user-comment">Comment</label>
+            <textarea
+              class="textarea-modal"
+              name="user-comment"
+              id="user-comment"
+              cols="30"
+              rows="10"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="container-checkbox-label">
+            <input
+              class="input-privacy visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="label-user-privacy" for="user-privacy">
+              <span class="lable-span">
+                <svg class="svg-vector" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="link-modal" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-button-send">Send</button>
         </form>
       </div>
     </div>
