--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
           </div>
         </div>
       </footer>
-    </div>
+    <!-- </div> -->
 
     <!-- modal -->
     <div class="modal-container">
